scripts/demo/schema/force-app/main/default/objects/Demo_Statement_Line__c/Demo_Statement_Line__c.object-meta.xml
<CustomObject>
    <label>Demo Statement Line</label>
    <pluralLabel>Demo Statement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Line</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
</CustomObject>