scripts/demo/schema/force-app/main/default/objects/Demo_Statement_Line__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <label>Running Balance</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>