scripts/demo/schema/force-app/main/default/objects/Demo_Statement_Line__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <label>Statement</label>
    <type>Lookup</type>
    <referenceTo>Demo_Statement__c</referenceTo>
    <relationshipName>Lines</relationshipName>
    <relationshipLabel>Statement</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>